# atmospy

./: .gitignore  LICENSE  README.md  api.html  genindex.html  index.html  installing.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  tutorial.html
.github/: CONTRIBUTING.md  release-drafter.yml
.github/workflows/: deploy-docs.yml  release-drafter.yml  release.yml  tests.yml
_sources/: index.rst.txt
_sources/examples/: calendar_by_hour.rst.txt  diel_by_weekend_weekday.rst.txt  dielplot.rst.txt
_sources/tutorial/: aesthetics.rst.txt  plots.rst.txt
_static/: documentation_options.js
_static/css/: custom.css
atmospy/: __init__.py  aerosols.py  calendar.py  distributions.py  errors.py  io.py  rcmod.py  relational.py  rose.py  stats.py  trends.py  utils.py  york.py
docs/: Makefile  api.rst  conf.py  index.rst  installing.rst  tutorial.rst
docs/_static/: copybutton.js
docs/_tutorial/: Introduction.ipynb  aesthetics.ipynb  data.ipynb  plots.ipynb
docs/examples/: anscombes_quartet.rst  calendar_by_day.py  calendar_by_day.rst  calendar_by_hour.py  calendar_by_hour.rst  dielplot.py  index.rst  pollution_rose.py  pollution_rose.rst  regression.py  regression.rst  rose_by_month.py  rose_by_month.rst
docs/source/: conf.py  index.rst
docs/sphinxext/: gallery_generator.py
docs/tools/: nb_to_doc.py  set_nb_kernels.py
docs/tutorial/: Introduction.rst  aesthetics.rst  data.rst  plots.rst  pollution_roses.rst
examples/: anscombes_quartet.html  anscombes_quartet.py  calendar_by_day.html  calendar_by_day.py  calendar_by_hour.html  calendar_by_hour.py  diel_by_weekend_weekday.html  diel_by_weekend_weekday.py  dielplot.html  index.html  pollution_rose.html  pollution_rose.py  regression.html  regression.py  rose_by_month.html
notebooks/: Lognormal Distributions.ipynb  SMPS Loader.ipynb
tests/: aerosols_tests.py  io_tests.py  test_relational.py  test_rose.py  test_stats.py  test_trends.py  test_utils.py
tests/datafiles/: epa_test.csv  regression_test.csv
tutorial/: Introduction.html  aesthetics.html  data.html  plots.html
