[tool.poetry]
name = "atmospy"
version = "0.1.1"
description = "Data analysis and visualization for air quality data."
authors = ["David H Hagan <david.hagan@quant-aq.com>"]
license = "Apache-2.0"
maintainers = []
readme = "README.md"
homepage = "https://github.com/dhhagan/atmospy/"
repository = "https://github.com/dhhagan/atmospy/"
documentation = "https://dhhagan.github.io/atmospy/"
packages = [
    { include = "atmospy" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = ">=1.2"
numpy = ">=1.20,<1.24.0 || >1.24.0"
matplotlib = ">=3.4,<3.6.1 || >3.6.1"
seaborn = ">=0.12"
scipy = ">=1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
ipykernel = "^6.29.4"
jupyter = "^1.0.0"
sphinx = "<6.0.0"
sphinx-copybutton = "^0.5.2"
pydata-sphinx-theme = "0.10.0rc2"
nbconvert = "^7.16.3"
numpydoc = "^1.5"
sphinx-issues = "^4.1.0"
sphinx-design = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/quant-aq/atmospy/issues"